--- a/style.css
+++ b/style.css
@@ -107,3 +107,8 @@ nav .menu {
     transform: scale(1.1);
     transition: all 0.3s;
 }
+audio{ width:200px;
+    margin-top: 100px;
+    display:none;
+    
+}
